--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
       integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
       crossorigin="anonymous"
     />
-    <link href="https://fonts.googleapis.com/css?family=Charm" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Charm"
+      rel="stylesheet"
+    />
+    <!-- <link href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css" rel="stylesheet">  -->
     <link rel="stylesheet" href="./resources/css/reset.css" />
     <link rel="stylesheet" href="./resources/css/style.css" />
 
@@ -24,13 +28,101 @@
   </head>
 
   <body>
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content -->
 
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Edit One or More Train Details</h4>
+          </div>
+          <div class="modal-body">
+            <!-- BUTTON DROPDOWNS -->
+            <div class="dropdown">
+              <button
+                class="btn btn-success dropdown-toggle"
+                type="button"
+                data-toggle="dropdown"
+              >
+                Select Field to Edit
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item">
+                  <form>
+                    <div class="form-group">
+                      <label for="name">Train Name</label>
+                      <input
+                        class="form-control mt-2"
+                        type="text"
+                        id="updateTNames"
+                        placeholder="Enter Train Name"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="role">Destination</label>
+                      <input
+                        class="form-control mt-2"
+                        type="text"
+                        id="updateTDest"
+                        placeholder="Enter Destination"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="start"
+                        >First Train Time (HH:mm Military Time)</label
+                      >
+                      <input
+                        class="form-control mt-2"
+                        type="text"
+                        id="updateTTime"
+                        placeholder="Enter Train Time"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="start">Train Frequency (mins)</label>
+                      <input
+                        class="form-control mt-2"
+                        type="text"
+                        id="updateTFreq"
+                        placeholder="Enter Train Frequency"
+                      />
+                    </div>
+                    <div id="updateData">
+                      <a
+                        id="submitUpdateData"
+                        class="btn btn-success m-2"
+                        href="#"
+                        role="button"
+                        >Update</a
+                      >
+                    </div>
+                  </form>
+                </a>
+              </div>
+              <!-- End Dropdown -->
+            </div>
+            <!-- End Modal Body -->
+          </div>
+
+          <!-- Modal Close -->
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Modal -->
+
+    <!-- Start Main -->
     <section>
       <div class="container mt-3">
         <div class="row">
           <div class="col-md-12">
             <div class="jumbotron jumbotron-fluid text-center">
-              <h1 class="display-2">Train Schedules</h1>
+              <h1 class="display-2"><span id="trainIcon" class="pl-2"><ion-icon name="ios-train"></ion-icon></span>Train Schedules</h1>
               <p class="lead mt-2">
                 Track Train's Destination and Arrival Times
               </p>
@@ -42,42 +134,46 @@
       </div>
     </section>
 
+    <!-- Train Schedule -->
     <main>
-      
-        <div class="container mt-3">
-          <div class="row">
-            <div class="col-md-12">
-              <p class="sectionheader bg-danger text-light p-3">Holiday Train Schedule</p>
-            </div>
+      <div class="container mt-3">
+        <div class="row">
+          <div class="col-md-12">
+            <p class="sectionheader bg-danger text-light p-3">
+              <span class="pt-2 pr-2"><ion-icon size="medium" name="time"></ion-icon></span>Holiday Train Schedule
+              <span id="wallClock" class="float-right"></span>
+            </p>
           </div>
         </div>
-        <div class="container">
-          <div class="row pl-3 pr-3">
-            <table id="myTable" class="table table-striped">
-              <thead class="bg-success text-light">
-                <tr>
-                  <th>#</th>
-                  <th>Train Name</th>
-                  <th>Destination</th>
-                  <th>Frequency (min)</th>
-                  <th>Next Arrival</th>
-                  <th>Minutes Away</th>
-                </tr>
-              </thead>
-              <tbody class="bg-light">
-                <!-- records will be entered here -->
-              </tbody>
-            </table>
-          </div>
+      </div>
+      <div class="container">
+        <div class="row pl-3 pr-3">
+          <table id="myTable" class="table table-striped">
+            <thead class="bg-success text-light">
+              <tr class="m-2">
+                <th>#</th>
+                <th>Train Name</th>
+                <th>Destination</th>
+                <th>Frequency (min)</th>
+                <th>Next Arrival</th>
+                <th>Mins Away</th>
+                <th>Edit</th>
+              </tr>
+            </thead>
+            <tbody class="bg-light">
+              <!-- records will be entered here -->
+            </tbody>
+          </table>
         </div>
-      
+      </div>
     </main>
 
+    <!-- Train Entry Form -->
     <section>
       <div class="container mt-3">
         <div class="row">
           <div class="col-md-12">
-            <p class="sectionheader bg-danger text-light p-3">Add Train</p>
+            <p class="sectionheader bg-danger text-light p-3"><span class="pr-2"><ion-icon size="medium" name="add-circle"></ion-icon></span>Add Train</p>
           </div>
         </div>
       </div>
@@ -106,7 +202,9 @@
                 />
               </div>
               <div class="form-group">
-                <label for="start">First Train Time (HH:mm Military Time)</label>
+                <label for="start"
+                  >First Train Time (HH:mm Military Time)</label
+                >
                 <input
                   class="form-control mt-2"
                   type="text"
@@ -166,6 +264,7 @@
       integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/ionicons@4.5.0/dist/ionicons.js"></script>
     <script src="resources/js/app.js"></script>
 
     <!-- script below is unused for this project -->
