--- a/index.html
+++ b/index.html
@@ -157,7 +157,6 @@
                 <th>Frequency (min)</th>
                 <th>Next Arrival</th>
                 <th>Mins Away</th>
-                <th>Edit</th>
               </tr>
             </thead>
             <tbody class="bg-light">
@@ -173,7 +172,7 @@
       <div class="container mt-3">
         <div class="row">
           <div class="col-md-12">
-            <p class="sectionheader bg-danger text-light p-3"><span class="pr-2"><ion-icon size="medium" name="add-circle"></ion-icon></span>Add Train</p>
+            <p id="addTrain" class="sectionheader bg-danger text-light p-3"><span class="pr-2"><ion-icon size="medium" name="add-circle"></ion-icon></span>Add Train</p>
           </div>
         </div>
       </div>
