--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title">Edit One or More Train Details</h4>
+            <h4 class="modal-title">Edit Train Details</h4>
           </div>
           <div class="modal-body">
             <!-- BUTTON DROPDOWNS -->
@@ -89,6 +89,7 @@
                       />
                     </div>
                     <div id="updateData">
+                      
                       <a
                         id="submitUpdateData"
                         class="btn btn-success m-2"
@@ -157,6 +158,7 @@
                 <th>Frequency (min)</th>
                 <th>Next Arrival</th>
                 <th>Mins Away</th>
+                <th>Edit</th>
               </tr>
             </thead>
             <tbody class="bg-light">
