--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
               <button
                 class="btn btn-success dropdown-toggle"
                 type="button"
-                data-toggle="dropdown"
-              >
+                data-toggle="dropdown">
                 Select Field to Edit
+              </button>
+              <button id="delTrain" class="btn btn-danger" type="button">
+                Delete Train
               </button>
               <div class="dropdown-menu">
                 <a class="dropdown-item">
